--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,19 @@
+/*PAGE EN CONSTRUCTION*/
+
+#pageInexistante h1{
+	font-size:500%;
+	text-align:center;
+	color:red;
+}
+
+#pageInexistante a{
+	color:green;
+}
+
+#pageInexistante {
+	text-align:center;
+}
+
 /* ACCUEIL */
 
 body{
@@ -52,9 +68,7 @@ a:hover{
 	text-align:left;
 	width:100%;
 }
-#menu a{
-	margin-left:100px;
-}
+
 #accueil, #tireBouchon, #decapsuleur, #catalogue{
 	height:1.2em;
 	overflow:hidden;
@@ -100,17 +114,14 @@ a:hover{
 	width:20%;
 }
 
-footer{
-	background-color:black;
-	color:white;
+#bas{
+	background-color:black;	
+	margin-top:15em;
 	width:100%;
-	margin-top:100px;
-	display:flex;
-	justify-content:center;
 }
 
-footer a, footer td{
-	padding: 50px 200px 30px 0px;
+#bas td{
+	padding:3em;
 }
 
 /* ARTICLE */
