--- a/assets/style.css
+++ b/assets/style.css
@@ -35,12 +35,16 @@ a:hover{
 	text-align:center;
 	color:white;
 	text-shadow: 0 0 4px black;
-	display:inline-block;
 }
 
 #header>h1{
 	font-size:300%;
+	width:100%;
 	display:inline;
+}
+#header>h2{
+	width:80%;
+	display:inline-block;
 }
 
 .logoHeader{
@@ -52,18 +56,17 @@ a:hover{
 	font-size:small;
 }
 .compte, .panier{
-	position:relative; top:-100px;
 	float:right;
 	width:10%;
-	font-size:medium;
+	display:inline;
 }
+
 .price{
 	color:yellow;
 	font-weight:bold;
 }
 
 #menu table{
-	position:relative; top:-48px;
 	background-color:DodgerBlue;
 	text-align:left;
 	width:100%;
@@ -76,11 +79,10 @@ a:hover{
 
 #accueil br+a, #tireBouchon br+a, #decapsuleur br+a, #catalogue br+a{
 	color:black;
-	background-color:DodgerBlue;
 	padding:1px;
 }
 #accueil:hover, #tireBouchon:hover, #decapsuleur:hover, #catalogue:hover{
-	height:5em;
+	height:5em;	
 	overflow:visible;
 	margin-bottom:150px;
 }
@@ -127,7 +129,6 @@ a:hover{
 /* ARTICLE */
 
 #article{
-	position:relative;top:-50px;
 	margin-left:10px;
 }
 
@@ -188,6 +189,11 @@ table#progression{
 	width:100%;
 	background:Gainsboro ;
 }
+
+#imagePanier{
+	width:20%;
+}
+
 .number{
 	padding:0px 5px 0px 5px;
 	background:DarkGrey;
@@ -199,7 +205,7 @@ span#enCours{
 }
 
 #panier img{
-	width:10%;
+	width:30%;
 }
 #articles{
 	display:flex;
@@ -242,7 +248,7 @@ span#enCours{
 	color:black;
 }
 
-/* CATALOGUE */
+/* RECHERCHE */
 
 .vignette img{
 	margin-left:50px;
@@ -289,4 +295,5 @@ select#tri{
 	color:green;
 	font-weight:bold;
 	font-variant:small-caps;
+	padding:5px;
 }
