--- a/assets/style.css
+++ b/assets/style.css
@@ -1,17 +1,3 @@
-@media (max-width:800px){ 
-	.compte{
-		position:fixed; top:0;
-		width:10%;
-		display:inline;
-	}
-	.panier{
-		position:fixed; top:5em;
-		width:10%;
-		display:inline;
-	}
-}
-
-
 /*PAGE EN CONSTRUCTION*/
 
 #pageInexistante h1{
@@ -46,19 +32,19 @@ a:hover{
 #header{
 	background-image:url("images/fondTitre.jpg");
 	width:100%;
+	display:inline-flex;
 	text-align:center;
 	color:white;
 	text-shadow: 0 0 4px black;
 }
 
-#header>h1{
+#header h1{
 	font-size:300%;
-	width:100%;
 	display:inline;
 }
-#header>h2{
-	width:80%;
-	display:inline-block
+#header h2{
+	width:100%;
+	display:inline-block;
 }
 
 .logoHeader{
@@ -66,11 +52,9 @@ a:hover{
 	float:left;
 	margin:5px;
 }
-.compte div+div, .panier div+div{
-	font-size:small;
-}
+
 .compte,.panier{
-	float:right;
+	margin-top:2em;
 	width:10%;
 	display:inline;
 }
