Page 'qui sommes nous' finie + bug bouton radio validation commande réparé

--- a/assets/style.css
+++ b/assets/style.css
@@ -370,7 +370,14 @@ select#tri{
 
 
 /* QUI SOMMES NOUS */
-
+#qsn{
+	margin:1em;
+	font-size:15pt;
+}
+#qsn em:hover{
+	text-decoration:underline;
+}
 #qsn h1{
+	font-size:61pt;
 	color:blue;
 }
